fixed naming for format crate

--- a/hyperfuel-net-types/Cargo.toml
+++ b/hyperfuel-net-types/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hyperfuel-net-types-fuel"
+name = "hyperfuel-net-types"
 version = "0.0.3"
 edition = "2021"
 description = "hyperfuel types for transport over network"
@@ -10,7 +10,7 @@ capnp = "0.18"
 serde = { version = "1", features = ["derive"] }
 arrayvec = { version = "0.7", features = ["serde"] }
 
-hyperfuel-format = { package = "hyperfuel-format-fuel", path = "../hyperfuel-format", version = "0.0.4" }
+hyperfuel-format = { package = "hyperfuel-format", path = "../hyperfuel-format", version = "0.0.4" }
 
 [build-dependencies]
 capnpc = "0.18"
