--- a/hyperfuel-format/Cargo.toml
+++ b/hyperfuel-format/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hyperfuel-format-fuel"
+name = "hyperfuel-format"
 version = "0.0.4"
 edition = "2021"
 description = "fuel network format library"
