--- a/hyperfuel-schema/Cargo.toml
+++ b/hyperfuel-schema/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hyperfuel-schema-fuel"
+name = "hyperfuel-schema"
 version = "0.0.2"
 edition = "2021"
 description = "schema utilities for hyperfuel"
