--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 
-members = [
+members = [ "examples/asset-id", "examples/predicate-root", "examples/simple-logs",
     "hyperfuel-client",
     "hyperfuel-format",
     "hyperfuel-net-types",
