update examples for testnet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [workspace]
 resolver = "2"
 
-members = [ "examples/asset-id", "examples/predicate-root", "examples/simple-logs",
+members = [
+    "examples/asset-id",
+    "examples/predicate-root",
+    "examples/find-receipt-ordering",
+    "examples/simple-logs",
     "hyperfuel-client",
     "hyperfuel-format",
     "hyperfuel-net-types",
