Add simple example getting all logs from fuel

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "examples/asset-id",
     "examples/predicate-root",
     "examples/simple-logs",
+    "examples/stream-logs",
     "hyperfuel-client",
     "hyperfuel-format",
     "hyperfuel-net-types",
